@@ -22,6 +22,8 @@ gem "whenever", "~> 0.9"
 gem "validates_email_format_of", "~> 1.6"
 gem "redcarpet"
 gem "inline_svg", "~> 0.7"
+gem "rotp", "~> 3.0"
+gem "rqrcode", "~> 0.10"
 
 group :development do
   gem "spring"
