@@ -11,7 +11,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema.define(version: 20160112144254) do
+ActiveRecord::Schema.define(version: 20160510143257) do
 
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
@@ -22,10 +22,9 @@ ActiveRecord::Schema.define(version: 20160112144254) do
     t.datetime "created_at",             null: false
     t.datetime "updated_at",             null: false
     t.integer  "status",     default: 0
+    t.index ["server_id"], name: "index_active_services_on_server_id", using: :btree
+    t.index ["service_id"], name: "index_active_services_on_service_id", using: :btree
   end
-
-  add_index "active_services", ["server_id"], name: "index_active_services_on_server_id", using: :btree
-  add_index "active_services", ["service_id"], name: "index_active_services_on_service_id", using: :btree
 
   create_table "apps", force: :cascade do |t|
     t.integer  "server_id"
@@ -34,9 +33,8 @@ ActiveRecord::Schema.define(version: 20160112144254) do
     t.datetime "updated_at",                      null: false
     t.boolean  "busy",            default: false
     t.boolean  "backups_enabled", default: false
+    t.index ["server_id"], name: "index_apps_on_server_id", using: :btree
   end
-
-  add_index "apps", ["server_id"], name: "index_apps_on_server_id", using: :btree
 
   create_table "backups", force: :cascade do |t|
     t.string   "filename"
@@ -46,10 +44,9 @@ ActiveRecord::Schema.define(version: 20160112144254) do
     t.datetime "updated_at",                  null: false
     t.boolean  "running",     default: false
     t.integer  "backup_type", default: 0
+    t.index ["app_id"], name: "index_backups_on_app_id", using: :btree
+    t.index ["service_id"], name: "index_backups_on_service_id", using: :btree
   end
-
-  add_index "backups", ["app_id"], name: "index_backups_on_app_id", using: :btree
-  add_index "backups", ["service_id"], name: "index_backups_on_service_id", using: :btree
 
   create_table "deploy_keys", force: :cascade do |t|
     t.string   "name"
@@ -57,16 +54,14 @@ ActiveRecord::Schema.define(version: 20160112144254) do
     t.integer  "server_id"
     t.datetime "created_at", null: false
     t.datetime "updated_at", null: false
+    t.index ["server_id"], name: "index_deploy_keys_on_server_id", using: :btree
   end
-
-  add_index "deploy_keys", ["server_id"], name: "index_deploy_keys_on_server_id", using: :btree
 
   create_table "domains", force: :cascade do |t|
     t.integer "app_id"
     t.string  "name"
+    t.index ["app_id"], name: "index_domains_on_app_id", using: :btree
   end
-
-  add_index "domains", ["app_id"], name: "index_domains_on_app_id", using: :btree
 
   create_table "env_vars", force: :cascade do |t|
     t.string   "key"
@@ -74,19 +69,17 @@ ActiveRecord::Schema.define(version: 20160112144254) do
     t.integer  "app_id"
     t.datetime "created_at", null: false
     t.datetime "updated_at", null: false
+    t.index ["app_id"], name: "index_env_vars_on_app_id", using: :btree
   end
-
-  add_index "env_vars", ["app_id"], name: "index_env_vars_on_app_id", using: :btree
 
   create_table "linked_services", force: :cascade do |t|
     t.integer  "app_id"
     t.integer  "service_id"
     t.datetime "created_at", null: false
     t.datetime "updated_at", null: false
+    t.index ["app_id"], name: "index_linked_services_on_app_id", using: :btree
+    t.index ["service_id"], name: "index_linked_services_on_service_id", using: :btree
   end
-
-  add_index "linked_services", ["app_id"], name: "index_linked_services_on_app_id", using: :btree
-  add_index "linked_services", ["service_id"], name: "index_linked_services_on_service_id", using: :btree
 
   create_table "servers", force: :cascade do |t|
     t.string   "name"
@@ -112,16 +105,17 @@ ActiveRecord::Schema.define(version: 20160112144254) do
   end
 
   create_table "users", force: :cascade do |t|
-    t.string   "email",            null: false
+    t.string   "email",                                   null: false
     t.string   "crypted_password"
     t.string   "salt"
     t.datetime "created_at"
     t.datetime "updated_at"
     t.string   "activation_token"
+    t.string   "totp_secret"
+    t.boolean  "two_factor_auth_enabled", default: false
+    t.index ["activation_token"], name: "index_users_on_activation_token", using: :btree
+    t.index ["email"], name: "index_users_on_email", unique: true, using: :btree
   end
-
-  add_index "users", ["activation_token"], name: "index_users_on_activation_token", using: :btree
-  add_index "users", ["email"], name: "index_users_on_email", unique: true, using: :btree
 
   add_foreign_key "active_services", "servers"
   add_foreign_key "active_services", "services"
