@@ -8,7 +8,9 @@ john:
   email: "john@example.com"
   salt: <%= salt = "asdasdastr4325234324sdfds" %>
   crypted_password: <%= Sorcery::CryptoProviders::BCrypt.encrypt("secret", salt) %>
+  totp_secret: "1234"
 
 jane:
   email: "jane@example.com"
   activation_token: "secret_token"
+  totp_secret: "1234"
