@@ -9,3 +9,4 @@ v 0.0.1 (unreleased)
 * Schedule Health_checks in their own queue and run them in IC. (jvanbaarsen)
 * Add ability to remove users from the IC (brambokdam)
 * Add blank slate for server page (jvanbaarsen)
+* Add Two Factor Authentication (jvanbaarsen)
